--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,31 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
+    <build>
+        <plugins>
+
+            <!-- Need at least 2.22.0 to support JUnit 5 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
+    
+    
+    
     <dependencies>
         <dependency>
             <groupId>org.netbeans.external</groupId>
@@ -13,6 +38,14 @@
             <version>RELEASE150</version>
         </dependency>
         
+        
+        <!-- junit 5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.5.2</version>
+            <scope>test</scope>
+        </dependency>
         
         <!-- flatlaf dark (look and feel) -->
         <dependency>
